# libxfce4util

./: .clang-format  .cppcheck-false-positives  .gitignore  .scan-build-false-positives  AUTHORS  COPYING  ChangeLog  ChangeLog.pre-4.2.0  Makefile.am  Makefile.in  NEWS  README  README.Kiosk  README.md  THANKS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  libxfce4util.spec.in  meson.build  meson_options.txt  module.xml
data/: Makefile.am
docs/: .cvsignore  Doxyfile  MAINPAGE  Makefile.am  Makefile.in  libxfce4util-docs.sgml  libxfce4util-docs.xml  libxfce4util-overrides.txt  libxfce4util-sections.txt  libxfce4util.types
docs/reference/: Makefile.am  libxfce4util-docs.xml  libxfce4util-docs.xml.in  libxfce4util-sections.txt  libxfce4util.types  meson.build
docs/tmpl/: debug.sgml  i18n.sgml  libxfce4util-config.sgml  libxfce4util-unused.sgml  standard-macros.sgml  utf8.sgml  util.sgml  xdg-basedir-support.sgml  xfce-desktopentry.sgml  xfce-fileutils.sgml  xfce-generics.sgml  xfce-i18n.sgml  xfce-kiosk.sgml  xfce-license.sgml  xfce-miscutils.sgml  xfce-posix-signal-handler.sgml  xfce-rc.sgml  xfce-resource.sgml  xfce-utf8.sgml
i18n/: Makefile.am  Makefile.in  nls.alias
libxfce4util/: .clang-format  Makefile.am  Makefile.in  abicheck.sh  debug.h  filter.c  filter.h  i18n.c  i18n.h  libxfce4util-1.0.metadata  libxfce4util-1.0.pc.in  libxfce4util-config.c  libxfce4util-config.h.in  libxfce4util-private.c  libxfce4util-private.h  libxfce4util.h  libxfce4util.symbols  licenses-texts.c  licenses-to-c.sh  make-libxfce4util-alias.pl  meson.build  option.c  option.h  test.c  utf8.c  utf8.h  util-enum-types.c  util-enum-types.h  util.c  util.h  xdg.c  xdg.h  xfce-consolekit.c  xfce-consolekit.h  xfce-debug.h  xfce-desktopentry.c  xfce-desktopentry.h  xfce-fileutils.c  xfce-fileutils.h  xfce-generics.h  (+28 more)
m4/: Makefile.am  Makefile.in  debug.m4  depends.m4  rpath.m4
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  (+39 more)
python-example/: test-introspection.py
xfce4-kiosk-query/: .cvsignore  Makefile.am  Makefile.in  main.c  meson.build
